[gd_scene load_steps=11 format=2]

[ext_resource path="res://mods-unpacked/otDan-BetterModList/ui/menus/pages/mods/components/mod_info_container.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/fonts/actual/base/font_big_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://mods-unpacked/otDan-BetterModList/ui/menus/pages/mods/menu_mods.gd" type="Script" id=3]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=4]
[ext_resource path="res://resources/themes/panel/panel_style.tres" type="StyleBox" id=5]
[ext_resource path="res://mods-unpacked/otDan-BetterModList/ui/menus/pages/mods/components/mod_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://mods-unpacked/otDan-BetterModList/ui/menus/pages/mods/components/author_toggle.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/fonts/actual/base/font_menus.tres" type="DynamicFont" id=8]
[ext_resource path="res://mods-unpacked/otDan-BetterModList/resources/themes/mod_menu_theme.theme" type="Theme" id=9]
[ext_resource path="res://mods-unpacked/otDan-BetterModList/ui/menus/global/info.png" type="Texture" id=10]

[node name="BetterMenuMods" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 3 )
mod_container_scene = ExtResource( 6 )
mod_author_toggle = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 1820.0
margin_bottom = 1009.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 1720.0
margin_bottom = 909.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "MENU_MODS"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 1820.0
margin_bottom = 1009.0
custom_constants/separation = 80
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1720.0
margin_bottom = 104.0
custom_constants/separation = -300
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 1262.0
margin_right = 1720.0
margin_bottom = 104.0
rect_min_size = Vector2( 300, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 453.0
margin_bottom = 99.0
alignment = 1

[node name="LoadedModCount" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 448.0
margin_bottom = 45.0
size_flags_vertical = 5
text = "LOADED_MOD_COUNT"
align = 1
valign = 1

[node name="DisabledModCount" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 49.0
margin_right = 448.0
margin_bottom = 94.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.768627, 0.317647, 0.317647, 1 )
text = "DISABLED_MOD_COUNT"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 1720.0
margin_bottom = 684.0
custom_constants/separation = 25

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.580392 )
margin_right = 355.0
margin_bottom = 500.0
rect_min_size = Vector2( 180, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 350.0
margin_bottom = 495.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 337.0
margin_bottom = 482.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 329.0
margin_bottom = 45.0
hint_tooltip = "Show only the mods of the specific author in the mod list. (This does not disable mods)"
theme = ExtResource( 9 )
custom_constants/separation = 16

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 288.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 8 )
text = "MOD_AUTHORS"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 304.0
margin_right = 329.0
margin_bottom = 45.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 329.0
margin_bottom = 474.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="AuthorContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 329.0
margin_bottom = 425.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModList" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.580392 )
margin_left = 380.0
margin_right = 1037.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/ModList"]
margin_left = 5.0
margin_top = 5.0
margin_right = 652.0
margin_bottom = 495.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/ModList/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 639.0
margin_bottom = 482.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ModListContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ModList/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 631.0
size_flags_horizontal = 3

[node name="ModInfoContainer" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1062.0
margin_right = 1720.0
margin_bottom = 500.0

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 560.0
margin_top = 764.0
margin_right = 1160.0
margin_bottom = 909.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorkshopButton" type="Button" parent="VBoxContainer/Buttons"]
unique_name_in_owner = true
margin_right = 600.0
margin_bottom = 65.0
text = "MENU_WORKSHOP"

[node name="BackButton" type="Button" parent="VBoxContainer/Buttons"]
unique_name_in_owner = true
margin_top = 80.0
margin_right = 600.0
margin_bottom = 145.0
text = "MENU_BACK"

[connection signal="pressed" from="VBoxContainer/Buttons/WorkshopButton" to="." method="_on_WorkshopButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/BackButton" to="." method="_on_BackButton_pressed"]
